Services/network/crowdsec/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: crowdsec
  namespace: crowdsec
  annotations:
    # If your Traefik is listening for this annotation:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`crowdsec.zlaya.tech`)
      kind: Rule
      services:
        - name: crowdsec-service
          port: 3000
      middlewares:
        - name: default-headers
          namespace: default
  tls: {}
